Feature/deprecate write ahead sink (#3)
* Add additional assertions
* Add support for ROW types
* Add support for scala case class
* Added KustoSinkWriter the implementation that uses a direct writer
* Enable tests
* Added more scenarios
* Fixes for POJO Sink
* Add tests for POJO sink