@@ -7,54 +7,66 @@
   <groupId>com.microsoft.azure.kusto</groupId>
   <artifactId>flink-connector-kusto</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>flink-connector-kusto</name>
-  <packaging>jar</packaging>
+  <modules>
+    <module>connector-core</module>
+    <module>samples-java</module>
+  </modules>
+  <packaging>pom</packaging>
 
   <!-- Allow users to pass custom connector versions -->
   <properties>
-    <scala.binary.version>2.12</scala.binary.version>
+    <archunit.version>1.0.0</archunit.version>
+    <assertj.version>3.24.2</assertj.version>
+    <azure.bom.version>1.2.14</azure.bom.version>
+    <byte-buddy.version>1.14.4</byte-buddy.version>
+    <commoncodec.version>1.15</commoncodec.version>
+    <dependency-check-maven.version>8.1.2</dependency-check-maven.version>
+    <findbugs.version>1.3.9</findbugs.version>
+    <flink.version>1.16.2</flink.version>
+    <formatter.version>2.12.0</formatter.version>
+    <impsort.version>1.6.0</impsort.version>
+    <jackson.version>2.14.2</jackson.version>
+    <java.source.version>1.8</java.source.version>
+    <java.target.version>1.8</java.target.version>
+    <jsonassert.version>1.5.1</jsonassert.version>
+    <jsonsmart.version>2.4.11</jsonsmart.version>
+    <junit5.version>5.8.1</junit5.version>
+    <kusto.sdk.version>5.0.2</kusto.sdk.version>
+    <log4j.version>2.20.0</log4j.version>
+    <mockito.version>5.3.1</mockito.version>
+    <mvn.compiler.plugin.version>3.11.0</mvn.compiler.plugin.version>
+    <mvn.failsafe.plugin.version>3.0.0</mvn.failsafe.plugin.version>
+    <mvn.shade.plugin.version>3.5.0</mvn.shade.plugin.version>
+    <netty.version>4.1.94.Final</netty.version>
+    <objenesis.version>2.6</objenesis.version>
     <scala-library.version>2.12.7</scala-library.version>
     <slf4j.version>1.7.36</slf4j.version>
-    <log4j.version>2.17.1</log4j.version>
-    <kusto.version>4.0.4</kusto.version>
-    <junit5.version>5.8.1</junit5.version>
-    <java.release.version>11</java.release.version>
-    <assertj.version>3.23.1</assertj.version>
-    <archunit.version>1.0.0</archunit.version>
-    <testcontainers.version>1.17.2</testcontainers.version>
-    <mockito.version>3.4.6</mockito.version>
-    <byte-buddy.version>1.12.10</byte-buddy.version>
-    <findbugs.version>1.3.9</findbugs.version>
-    <flink.version>1.17.0</flink.version>
-    <mvn.compiler.plugin.version>3.11.0</mvn.compiler.plugin.version>
+    <woodstox.version>6.5.1</woodstox.version>
+    <scala.binary.version>2.12</scala.binary.version>
   </properties>
 
+
   <dependencies>
-
     <!-- Core -->
-
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-streaming-java</artifactId>
       <version>${flink.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-streaming-scala_${scala.binary.version}</artifactId>
       <version>${flink.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-connector-base</artifactId>
       <version>${flink.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -76,19 +88,9 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Cassandra dependencies -->
-
     <dependency>
-      <groupId>com.microsoft.azure.kusto</groupId>
-      <artifactId>kusto-ingest</artifactId>
-      <version>${kusto.version}</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>com.microsoft.azure.kusto</groupId>
-      <artifactId>kusto-data</artifactId>
-      <version>${kusto.version}</version>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-storage-blob</artifactId>
     </dependency>
 
     <!-- Logging API -->
@@ -112,14 +114,18 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>${jsonassert.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -127,27 +133,17 @@
       <type>jar</type>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>${testcontainers.version}</version>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy</artifactId>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
@@ -160,21 +156,6 @@
       <artifactId>flink-test-utils-junit</artifactId>
       <version>${flink.version}</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>cassandra</artifactId>
-      <version>${testcontainers.version}</version>
-      <scope>test</scope>
-      <!-- For dependency convergence to avoid forcing all the conflicting versions
-      of cassandra-driver-core transitive dependencies -->
-      <exclusions>
-        <exclusion>
-          <groupId>com.datastax.cassandra</groupId>
-          <artifactId>cassandra-driver-core</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
@@ -233,54 +214,54 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
       <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
         <version>${byte-buddy.version}</version>
       </dependency>
-
       <!-- For dependency convergence -->
       <dependency>
         <groupId>com.esotericsoftware.kryo</groupId>
         <artifactId>kryo</artifactId>
         <version>2.24.0</version>
       </dependency>
-
       <!-- For dependency convergence -->
       <dependency>
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-library</artifactId>
         <version>${scala-library.version}</version>
       </dependency>
-
       <!-- For dependency convergence -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
-
       <!-- For dependency convergence -->
       <dependency>
         <groupId>org.objenesis</groupId>
         <artifactId>objenesis</artifactId>
-        <version>2.6</version>
+        <version>${objenesis.version}</version>
       </dependency>
-
       <!-- For dependency convergence -->
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.8.2</version>
+        <version>${junit5.version}</version>
       </dependency>
-
       <!-- For dependency convergence -->
       <dependency>
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-commons</artifactId>
         <version>1.8.2</version>
       </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-sdk-bom</artifactId>
+      <version>${azure.bom.version}</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -292,8 +273,100 @@
         <version>${mvn.compiler.plugin.version}</version>
         <inherited>true</inherited>
         <configuration>
-          <release>${java.release.version}</release>
+          <source>${java.source.version}</source>
+          <target>${java.target.version}</target>
         </configuration>
+      </plugin>
+      <!-- Makes it easier to have consist import order -->
+      <plugin>
+        <groupId>net.revelc.code</groupId>
+        <artifactId>impsort-maven-plugin</artifactId>
+        <version>${impsort.version}</version>
+        <configuration>
+          <groups>java.,javax.,org.,com.</groups>
+          <removeUnused>true</removeUnused>
+          <staticAfter>true</staticAfter>
+          <!-- <staticGroups>java.,javax.,org.w3c.,org.xml.,junit.</staticGroups> -->
+        </configuration>
+        <executions>
+          <execution>
+            <id>sort-imports</id>
+            <goals>
+              <goal>sort</goal><!-- runs at process-sources phase by default -->
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>${dependency-check-maven.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>${formatter.version}</version>
+        <configuration>
+          <configFile>${project.basedir}/formatter.xml</configFile>
+          <encoding>UTF-8</encoding>
+          <lineEnding>KEEP</lineEnding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${mvn.failsafe.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>me.fabriciorby</groupId>
+            <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
+            <version>0.1.0</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <forkCount>3</forkCount>
+              <reuseForks>true</reuseForks>
+              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+              <includes>
+                <include>**/*IT.java</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>${mvn.shade.plugin.version}</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <createSourcesJar>true</createSourcesJar>
+              <shadedClassifierName>shaded</shadedClassifierName>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
